[package]
name = "rustflare"
version = "0.1.0"
edition = "2024"

[dependencies]
acme-lib = "0.9.1"
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.18.0", features = ["full"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_yaml = "0.9.18"
dotenv = "0.15.0"
