[package]
name = "rustflare"
version = "0.1.0"
edition = "2021"

[dependencies]
acme2-eab = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
openssl = "0.10"
serde_json = "1"
base64 = "0.21"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
